Updated HTML code

--- a/index.html
+++ b/index.html
@@ -3,9 +3,8 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Ashley A. Dehart | Data Analyst Resume</title>
+        <title>Data Analyst Resume</title>
     </head>
-
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -74,30 +73,26 @@
             border-radius: 4px;
         }
     </style>
-
     <body>
         <main class="container">
             <section class="header">
                 <h1>Ashley A. Dehart</h1>
                 <p class="contact">
                     Email:
-                    <a href="ashleyadehartbusiness@gmail.com">ashleyadehartbusiness@gmail.com</a>
+                    <a href="mailto:ashleyadehartbusiness@gmail.com">ashleyadehartbusiness@gmail.com</a>
                     | Phone: (606) 356-1118
                     | LinkedIn:
-                    <a href="www.linkedin.com/in/ashley-a-dehart-64216130a">www.linkedin.com/in/ashley-a-dehart-64216130a</a>
+                    <a href="https://www.linkedin.com/in/ashley-a-dehart/">https://www.linkedin.com/in/ashley-a-dehart/</a>
                 </p>
             </section>
-
             <section class="section">
                 <h2>Summary</h2>
                 <p>
                     Data Analyst experienced in validating and cleaning high-volume, multi-system datasets to maintain 95%+ data accuracy. Built KPI-driven reports and dashboards using Excel/Google Sheets, Tableau, and Python/SQL projects to support operational and program-level decision-making. Strong in documentation, data validation, and reproducible workflows.
                 </p>
             </section>
-
             <section class="section">
                 <h2>Work Experience</h2>
-                
                 <div class="item">
                     <h3>Education Professional (Technical & Data Support) - Carter County Schools</h3>
                     <p>Sept 2020 – Jan 2026 | Grayson, KY</p>
@@ -115,7 +110,6 @@
                         system usability and reducing repeat errors.
                     </p>
                 </div>
-
                 <div class="item">
                     <h3>College & Career Coordinator (Data + Student Services) - Morehead State University</h3>
                     <p>Nov 2023 – Jan 2025 | Morehead, KY</p>
@@ -130,15 +124,12 @@
                     </p>
                 </div>
             </section>
-
-            <section class="section">
+            <div class="section">
                 <h2>Education</h2>
                 <div class="item">
                     <h3>Bachelor’s Degree - Morehead State University</h3>
                     <p>2014</p>
                 </div>
-            </section>
-
             <section class="section">
                 <h2>Skills</h2>
                 <div class="skills">
@@ -147,39 +138,34 @@
                         <li>Python (Pandas)</li>
                         <li>Excel / Google Sheets</li>
                         <li>Data Cleaning</li>
+                        <li>JavaScript</li>
                         <li>Data Validation</li>
                         <li>Tableau</li>
                         <li>Reporting & KPI Tracking</li>
                         <li>Data Visualization</li>
                         <li>Documentation</li>
-                        <li>Stakeholder Communication</li>
-                        <li>HTML/CSS</li>
+                        <li>Team Leadership</li>
+                        <li>HTML</li>
+                        <li>CSS</li>
                         <li>Git/GitHub</li>
                     </ul>
                 </div>
             </section>
-
             <section class="section">
                 <h2>Projects</h2>
-
                 <div class="item">
                     <h3>WIOA Youth Program Dashboard</h3>
                     <p>
                         Built a dashboard-style reporting system to track enrollment, attendance, services, and outcomes across
                         a participant dataset. Cleaned and standardized fields, created KPIs, and designed visuals to
                         support program decision-making. Tools: Excel/Sheets, Tableau, SQL/Python.
-                        <br />
-                        Link: <a href="#">https://public.tableau.com/views/NextStepYouthInsights/Dashboard1?:language=en-US&:sid=&:redirect=auth&:display_count=n&:origin=viz_share_link</a>
                     </p>
                 </div>
-
                 <div class="item">
                     <h3>GitHub Web Resume (HTML/CSS)</h3>
                     <p>
                         Developed a clean, responsive resume website using semantic HTML and CSS styling, hosted via GitHub Pages.
                         Tools: HTML, CSS, Git/GitHub.
-                        <br />
-                        Link: <a href="#">https://github.com/ashleyadehart/ashleyadehart.github.io</a>
                     </p>
                 </div>
             </section>
