--- a/index.html
+++ b/index.html
@@ -94,7 +94,18 @@
             <section class="section">
                 <h2>Work Experience</h2>
                 <div class="item">
-                    <h3>Education Professional (Technical & Data Support) - Carter County Schools</h3>
+                    <h3>AI Trainer - Handshake AI</h3>
+                    <p>Jan 2026 – Present | Remote</p>
+                    <p>
+                        • Evaluate and score 50+ AI prompt responses weekly, maintaining 95% consistency across detailed quality standards.
+                        <br />
+                        • Label structural elements within images to convert unstructured visual data into standardized, analysis-ready datasets, improving downstream model reliability and usability.
+                        <br />
+                        • Identify recurring error patterns and ambiguous cases in prompt outputs and image annotations, documenting insights that supported dataset refinement and quality improvements.
+                    </p>
+                </div>
+                <div class="item">
+                    <h3>Education Professional - Carter County Schools</h3>
                     <p>Sept 2020 – Jan 2026 | Grayson, KY</p>
                     <p>
                         • Maintained high data accuracy by entering, auditing, and updating confidential student records across
@@ -111,7 +122,7 @@
                     </p>
                 </div>
                 <div class="item">
-                    <h3>College & Career Coordinator (Data + Student Services) - Morehead State University</h3>
+                    <h3>College & Career Coordinator - Morehead State University</h3>
                     <p>Nov 2023 – Jan 2025 | Morehead, KY</p>
                     <p>
                         • Tracked participant progress and outcomes using structured spreadsheets/databases to support program
