--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
             <section class="section">
                 <h2>Work Experience</h2>
                 <div class="item">
-                    <h3>AI Trainer - Handshake AI</h3>
+                    <h3>Data Annotator - Handshake AI</h3>
                     <p>Jan 2026 – Present | Remote</p>
                     <p>
                         • Evaluate and score 50+ AI prompt responses weekly, maintaining 95% consistency across detailed quality standards.
