Edited resume bullet points

--- a/index.html
+++ b/index.html
@@ -97,11 +97,13 @@
                     <h3>Data Annotator - Handshake AI</h3>
                     <p>Jan 2026 – Present | Remote</p>
                     <p>
-                        • Evaluate and score 50+ AI prompt responses weekly, maintaining 95% consistency across detailed quality standards.
+                        • Assess and score 50+ records weekly using standardized evaluation frameworks, maintaining 95% scoring consistency to support high-quality training datasets.
                         <br />
-                        • Label structural elements within images to convert unstructured visual data into standardized, analysis-ready datasets, improving downstream model reliability and usability.
+                        • Structure unorganized visual inputs into standardized, analysis-ready formats through detailed annotation and validation processes.
                         <br />
-                        • Identify recurring error patterns and ambiguous cases in prompt outputs and image annotations, documenting insights that supported dataset refinement and quality improvements.
+                        • Analyze recurring error patterns and edge cases within labeled datasets, producing documentation that supports iterative dataset improvements.
+                        <br />
+                        • Ensure data quality and reliability by applying consistent validation checks across text and image-based datasets.
                     </p>
                 </div>
                 <div class="item">
